--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,7 @@ pwa:
   enabled: true # the option for PWA feature
 
 paginate: 10
+paginate_path: "/page:num/"
 
 # The base URL of your site
 baseurl: ""
