Update DR Zou information

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -12,8 +12,8 @@ principal_investigators:
   - name: Dr. Na Zou
     image: /assets/img/people/NZ
     title: Assistant Professor
-    institution: Texas A & M University (HSI)
-    url: https://engineering.tamu.edu/etid/profiles/zou-na.html
+    institution: University of Houston (HSI)
+    url: https://nzou1.github.io/
   - name: Dr. Xia Hu
     image: /assets/img/people/XH
     title: Associate Professor
