add new publication page, add UH logo

--- a/_data/institutions.yml
+++ b/_data/institutions.yml
@@ -8,9 +8,9 @@ institutions:
   - name: Rice University (Research Institute)
     image: /assets/img/institutions/RU
     url: https://www.rice.edu/
-  - name: Texas A & M University (HSI)
-    image: /assets/img/institutions/TAMU
-    url: https://www.tamu.edu/index.html
+  - name: University of Houston (HSI)
+    image: /assets/img/institutions/UH
+    url: https://www.uh.edu/
   - name: The University of Texas Health Science Center of Houston (Research Institute)
     image: /assets/img/institutions/UTH
     url: https://www.uth.edu/
