--- a/_data/people.yml
+++ b/_data/people.yml
@@ -49,10 +49,30 @@ key_personnel:
     url: https://www.linkedin.com/in/rosalyn-lang-5773b918/
 
 
-students:
+research_assistants:
   - name: Sirui Ding
     image: /assets/img/people/SD
-    title: Ph.D. Candidate
+    title: Ph.D.
     institution: Texas A & M University
     url: https://www.linkedin.com/in/sirui-ding-2aa88a161/
+  - name: Songyuan Sui
+    image: /assets/img/people/SS
+    title: Ph.D. Student
+    institution: Rice University
+    url: https://www.linkedin.com/in/songyuan-sui-a49430202/
+  - name: Tracy Asibu
+    image: /assets/img/people/TA
+    title: Master's Student
+    institution: The University of Texas Health Science Center at Houston
+    url: https://www.linkedin.com/in/tracy-asibu/
+  - name: Sage Rowe
+    image: /assets/img/people/SR
+    title: Junior Undergraduate Student
+    institution: University of North Carolina at Charlotte
+    url: https://www.linkedin.com/in/sage-rowe-143a74255/
+  - name: Taniyah Pruitt
+    image: /assets/img/people/TP
+    title: Freshman
+    institution: University of North Carolina at Charlotte
+    url: https://www.linkedin.com/in/taniyah-pruitt-83540821a/
 
