fix a typo on homepage

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Chicago
 
 title: HEART # the main title
 
-tagline: Heart Equity and Access - Responsible Tranplantation # it will display as the sub-title
+tagline: Heart Equity and Access - Responsible Transplantation # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   Heart Equity and Access - Responsible Tranplantation.
